@@ -1,50 +1,21 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.15 2005-04-19 23:53:52 achu Exp $
+## $Id: Makefile.am,v 1.16 2005-05-13 23:11:05 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
 
-# Use Perl's ExtUtils::MakeMaker to get autoconf/automake to install
-# into the correct location
-
-# DESTDIR is usually set during make install time, not configure or
-# make time, so this is our work around
-PERL_INSTALL_DESTDIR = @PERL_INSTALL_DESTDIR@
-PERL_INSTALL_PREFIX = @PERL_INSTALL_PREFIX@
-
-MAKEMAKERFLAGS = INSTALLDIRS=site \
-		 SITEPREFIX=$(PERL_INSTALL_PREFIX) \
-		 MAKEFILE=Makefile.xs \
-		 FIRST_MAKEFILE=Makefile.xs
-
-all: Makefile.xs
-	$(MAKE) -f Makefile.xs
-
-Makefile.xs: Makefile.PL
-# Hacks to make distcheck work
-	if ! test -a Makefile.PL; then \
-		cp $(srcdir)/Makefile.PL .; \
-	fi
-	if ! test -a Gendersllnl.pm; then \
-		cp $(srcdir)/Gendersllnl.pm .; \
-	fi
-	TEMPINSTALLSITELIB=`perl -e 'use Config; print $$Config{installsitearch}'`; \
-	$(PERL) Makefile.PL $(MAKEMAKERFLAGS) INSTALLSITELIB=$(PERL_INSTALL_DESTDIR)$$TEMPINSTALLSITELIB
-
-install: Makefile.xs
-	$(MAKE) -f Makefile.xs pure_install
-
-pure_install: Makefile.xs
-	$(MAKE) -f Makefile.xs pure_install
-
-install-data-local:
-	$(MAKE) -f Makefile.xs pure_install
-
-clean:
-	if test -a Makefile.xs; then \
-		$(MAKE) -f Makefile.xs clean; \
-	fi
-	rm -f Makefile.xs
-	rm -f Makefile.xs.old
-
-EXTRA_DIST = Gendersllnl.pm Makefile.PL
+INSTALLSITEARCH=`perl -e 'use Config; $$T=$$Config{installsitearch}; $$T=~/\/usr\/lib(.*)/; print $$1;'`
+ 
+GENDERSPMFILES = Gendersllnl.pm
+GENDERSPMFILESdir = $(libdir)/$(INSTALLSITEARCH)
+GENDERSPMFILES_DATA = $(GENDERSPMFILES)
+ 
+Gendersllnl.3pm:
+	$(POD2MAN) Gendersllnl.pm Gendersllnl.3pm
+ 
+man3_MANS = Gendersllnl.3pm
+ 
+install-data-hook:
+	chmod 444 $(DESTDIR)/$(libdir)/$(INSTALLSITEARCH)/Gendersllnl.pm
+ 
+EXTRA_DIST = Gendersllnl.pm
