@@ -1,3 +1,11 @@
+2005-05-13  Albert Chu  <chu11@llnl.gov>
+	 
+        * src/Genders/Makefile.am: Cleanup and fix build.
+ 
+        * src/Genders/Makefile.PL: Removed file.
+
+	* configure.ac: Add search for pod2man.
+		
 2005-05-10  Albert Chu  <chu11@llnl.gov>
 
 	* configure.ac: Update library versions.
